--- a/challenge4/kubernetes-api.yml
+++ b/challenge4/kubernetes-api.yml
@@ -13,26 +13,26 @@ spec:
    spec:
      containers:
      - name: k8s-api
-       image: ohteam2.azurecr.io/team2/k8s-api:1.0
+       image: ohteam2.azurecr.io/team2/k8s-api:1.2
        ports:
        - name: apihttp 
          containerPort: 80
        env:
        - name: EULA
          value: "TRUE"
----
-apiVersion: v1
-kind: Service
-metadata:
- name: k8s-api
-spec:
- type: LoadBalancer
- ports:
- - name: apihttp 
-   port: 80
- selector:
-   app: k8s-api
----
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#  name: k8s-api
+# spec:
+#  type: LoadBalancer
+#  ports:
+#  - name: apihttp 
+#    port: 80
+#  selector:
+#    app: k8s-api
+# ---
 # apiVersion: rbac.authorization.k8s.io/v1beta1
 # kind: ClusterRoleBinding
 # metadata:
